--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: rgb(29, 0, 37);
 }
 
 canvas {
-    background-color: black;
+    background-color: rgb(29, 0, 37);
 }
