--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(29, 0, 37);
+    background-color: rgb(0, 0, 0);
 }
 
 canvas {
-    background-color: rgb(29, 0, 37);
+    background-color: rgb(0, 0, 0);
+}
+
+h1 {
+    color: #382ca2;
 }
