--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,11 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(0, 0, 0);
+    background-image: url("../img/3.Background/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* height: 100vh;
+    width: 100vw; */
 }
 
 canvas {
@@ -11,10 +15,16 @@ canvas {
     margin-right: auto;
     margin-left: auto;
     display: block;
+    border-radius: 10px;
+    border: 2px solid rgb(132, 0, 255);
 }
 
 h1 {
-    color: #382ca2;
+    color: white;
+    font-size: 48px;
+    text-align: center;
+    text-shadow: 2px 2px 4px #000000;
+    /* margin-top: 100px; */
 }
 
 #HowToPlay {
@@ -39,10 +49,48 @@ h1 {
     display: block;
 }
 
-button {
-    background-color: #382ca2;
-    color: white;
-    font-size: 1.5rem;
-    border-radius: 10px;
-    z-index: 99;
+#fullscreen>div:nth-child(1),
+.canvasSub {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-top: 10px;
+}
+
+
+/* Button container */
+.btn-container {
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    height: 50px;
+    border-radius: 25px;
+    background-color: #0077cc;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Button text */
+.btn-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 225px;
+    height: 100px%;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    transition: transform 0.2s ease;
+}
+
+/* Hover effect */
+.btn-container:hover .btn-text {
+    transform: translateY(-3px);
+}
+
+/* Active effect */
+.btn-container:active .btn-text {
+    transform: translateY(0);
+    transition: none;
 }
