--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: "Luckiest Guy" !important;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -6,25 +10,27 @@ body {
     background-image: url("../img/3.Background/background.png");
     background-repeat: no-repeat;
     background-size: cover;
-    /* height: 100vh;
-    width: 100vw; */
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
 
 canvas {
     background-color: rgb(0, 0, 0);
     margin-right: auto;
     margin-left: auto;
-    display: block;
+    display: none;
     border-radius: 10px;
-    border: 2px solid rgb(132, 0, 255);
+    border: 4px solid rgb(132, 0, 255);
 }
 
 h1 {
-    color: white;
+    color: rgb(132, 0, 255);
     font-size: 48px;
     text-align: center;
     text-shadow: 2px 2px 4px #000000;
-    /* margin-top: 100px; */
+    overflow: hidden;
+    margin: 8px 0;
 }
 
 #HowToPlay {
@@ -57,7 +63,6 @@ h1 {
     padding-top: 10px;
 }
 
-
 /* Button container */
 .btn-container {
     display: inline-block;
@@ -65,8 +70,8 @@ h1 {
     overflow: hidden;
     height: 50px;
     border-radius: 25px;
-    background-color: #0077cc;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    background-color: rgb(132, 0, 255);
+    border: rgb(132, 0, 255) solid;
 }
 
 /* Button text */
