--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,25 @@ body {
     overflow: hidden;
 }
 
+.canvas-field {
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+
+
+#gameOverScreen {
+    z-index: 10;
+    height: auto;
+    width: 480px;
+}
+
+#winnerScreen {
+    height: auto;
+    width: 480px;
+}
+
 canvas {
     background-color: rgb(0, 0, 0);
     margin-right: auto;
