--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,39 @@ body {
     position: relative;
     display: flex;
     justify-content: center;
+    height: 480px;
+    width: 720px;
 }
 
-
-
 #gameOverScreen {
-    z-index: 10;
+    z-index: 9999;
+    position: fixed;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     height: auto;
-    width: 480px;
+    width: 75%;
 }
 
 #winnerScreen {
+    z-index: 9999;
+    position: fixed;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(132, 0, 255, 0.45);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+    border: 1px solid rgba(255, 255, 255, 0.5);
     height: auto;
-    width: 480px;
+    width: 55%;
+
 }
 
 canvas {
