--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,11 @@ body {
 }
 
 .canvas-field {
-    position: relative;
+    /* position: relative;
     display: flex;
     justify-content: center;
     height: 480px;
-    width: 720px;
+    width: 720px; */
 }
 
 #gameOverScreen {
@@ -137,4 +137,18 @@ h1 {
 .btn-container:active .btn-text {
     transform: translateY(0);
     transition: none;
+}
+
+/* Smartphones */
+
+@media only screen and (max-width: 720px) {
+    canvas {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-height: 480px) {
+    canvas {
+        height: 100vh;
+    }
 }
