--- a/css/style.css
+++ b/css/style.css
@@ -73,13 +73,14 @@ h1 {
 }
 
 #HowToPlay {
-    color: white;
+    color: rgb(255, 230, 0);
     height: 480px;
     width: 720px;
     display: none;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-shadow: rgb(0, 0, 0) 1px 0 10px;
 }
 
 .displayNone {
