--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,12 @@
     font-family: 'Luckiest Guy' !important;
 }
 
-#playButtonsLeft {
+#rotaDisplay {
+    display: none;
+}
+
+#touch-area-left,
+#touch-area-left-img {
     display: none;
 }
 
@@ -269,19 +274,106 @@ h1 {
         font-weight: 200;
     }
 
-    #HowToPlay > span {
+    #HowToPlay>span {
         font-size: 14px;
         font-weight: 200;
     }
 
-    #fullscreen {
+    #fullscreen {}
+
+    #touch-area-left {
+        display: block;
+        position: fixed;
+        left: 10px;
+        bottom: 10px;
+        height: 35%;
     }
 
-    #playButtonsLeft {
+    #touch-area-right {
         display: block;
-        height: 35%;
         position: fixed;
-        left: 5px;
+        right: 5px;
         bottom: 5px;
+        height: 250px;
+        width: 250px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        transform: rotate(45deg);
+    }
+
+    .attack-btn {
+        background-color: rgba(0, 0, 0, 0.3);
+        height: 100px;
+        width: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #touch-area-left-img {
+        height: 140px;
+        width: 220px;
+        display: block;
+    }
+
+    .span-wrap {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        width: 95%;
+    }
+
+    .touchbtn-left {
+        background-color: rgba(0, 0, 0, 0.1);
+        height: 140px;
+        width: 225px;
+        position: fixed;
+        bottom: 5px;
+        left: 10px;
+        display: flex;
+        flex-direction: column
+    }
+
+
+
+    .touchbtn-rows {
+        width: 225px;
+        height: 70px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .touchbtn-first-row {}
+
+    .touchbtn-second-row {}
+
+    .test-color {
+        background-color: rgba(0, 0, 0, 0.3);
+        height: 68px;
+        width: 68px;
+    }
+
+    #rotaDisplay {
+        display: none;
+    }
+
+
+}
+
+@media (max-width: 820px) and (orientation: portrait) {
+    #rotaDisplay {
+        display: flex !important;
+        align-items: center;
+        justify-content: center;
+        z-index: 999;
+        height: 100vh;
+    }
+
+    #touch-area-left,
+    #toggleGame {
+        display: none !important;
     }
 }
