--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,12 @@
 }
 
 #touch-area-left,
-#touch-area-left-img {
+#touch-area-left-img,
+#touch-area-right,
+#bubbleAttackTouch,
+#slapAttackTouch {
     display: none;
+    opacity: 0.8;
 }
 
 #debugBtn {
@@ -44,11 +48,10 @@ html {
     overflow: hidden;
 }
 
-#fullscreen>div:nth-child(1),
-.canvasSub {
+#canvasOver,
+.canvasOver {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
     padding-top: 10px;
 }
 
@@ -199,9 +202,9 @@ h1 {
     }
 
 
-    #fullscreen-button {
+    /* #fullscreen-button {
         display: none;
-    }
+    } */
 
     .btn-text {
         width: 170px;
@@ -224,14 +227,10 @@ h1 {
     }
 }
 
-@media only screen and (max-height: 480px) {
+@media only screen and (max-width: 720px) {
     canvas {
         width: 100%;
     }
-}
-
-@media only screen and (max-height: 480px),
-(max-width: 720px) {
 
     #toggleGame {
         position: fixed;
@@ -303,8 +302,22 @@ h1 {
         transform: rotate(45deg);
     }
 
+    #bubbleAttackTouch,
+    #slapAttackTouch {
+        display: flex;
+        transform: rotate(129deg);
+    }
+
+
+    #canvasOver,
+    .canvasOver {
+        display: flex;
+        flex-direction: column;
+        padding-top: 10px;
+    }
+
     .attack-btn {
-        background-color: rgba(0, 0, 0, 0.3);
+        /* background-color: rgba(0, 0, 0, 0.3); */
         height: 100px;
         width: 100px;
         display: flex;
@@ -326,7 +339,7 @@ h1 {
     }
 
     .touchbtn-left {
-        background-color: rgba(0, 0, 0, 0.1);
+        /* background-color: rgba(0, 0, 0, 0.1); */
         height: 140px;
         width: 225px;
         position: fixed;
@@ -335,8 +348,6 @@ h1 {
         display: flex;
         flex-direction: column
     }
-
-
 
     .touchbtn-rows {
         width: 225px;
@@ -351,7 +362,7 @@ h1 {
     .touchbtn-second-row {}
 
     .test-color {
-        background-color: rgba(0, 0, 0, 0.3);
+        /* background-color: rgba(0, 0, 0, 0.3); */
         height: 68px;
         width: 68px;
     }
@@ -359,8 +370,6 @@ h1 {
     #rotaDisplay {
         display: none;
     }
-
-
 }
 
 @media (max-width: 820px) and (orientation: portrait) {
@@ -373,7 +382,10 @@ h1 {
     }
 
     #touch-area-left,
-    #toggleGame {
+    #toggleGame,
+    #touch-area-right,
+    #bubbleAttackTouch,
+    #slapAttackTouch {
         display: none !important;
     }
 }
