--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,8 @@ html {
     width: 720px; */
 }
 
-#gameOverScreen {
+#gameOverScreen,
+#winnerScreen {
     z-index: 9999;
     position: fixed;
     margin: auto;
@@ -73,22 +74,6 @@ html {
     top: 60px;
     height: auto;
     width: 75%;
-}
-
-#winnerScreen {
-    z-index: 9999;
-    position: fixed;
-    margin: auto;
-    left: 0;
-    right: 0;
-    top: 50px;
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    height: auto;
-    width: 85%;
-    z-index: 10;
 }
 
 canvas {
@@ -202,11 +187,6 @@ h1 {
         bottom: 50px;
     }
 
-
-    #fullscreen-button {
-        display: none;
-    }
-
     .btn-text {
         width: 170px;
         margin: 6px;
@@ -244,15 +224,14 @@ h1 {
 
 
     #winnerScreen {
-        width: 75%;
+        width: 74%;
         bottom: 50%;
         top: 49%;
     }
 
-
-    #fullscreen-button {
+    /* #fullscreen-button {
         display: none;
-    }
+    } */
 
     .btn-text {
         width: 170px;
@@ -281,8 +260,6 @@ h1 {
         font-size: 14px;
         font-weight: 200;
     }
-
-    #fullscreen {}
 
     #touch-area-left {
         display: block;
@@ -313,7 +290,7 @@ h1 {
     }
 
     .attack-btn {
-        /* background-color: rgba(0, 0, 0, 0.3); */
+        background-color: rgba(0, 0, 0, 0.3);
         height: 100px;
         width: 100px;
         display: flex;
