minor bugs fixed, added slap sfx

--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,20 @@
 }
 
 #loadingscreen {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 900;
+    background-color: black;
+}
+
+#loadingScreenSubDiv {
     background-image: url('../img/1.Sharkie/3.Swim/PreviewOP2.gif');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
     width: 100vw;
     height: 100vh;
-    position: fixed;
-    z-index: 900;
 }
 
 .d-none {
@@ -263,10 +269,10 @@ h1 {
     }
 
     #gameOverScreen,
-#winnerScreen {
-    top: 40px;
-    width: 55%;
-}
+    #winnerScreen {
+        top: 40px;
+        width: 55%;
+    }
 
     #HowToPlay {
         font-size: 14px;
