--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,6 @@ html {
 
 #fullscreen {
     position: fixed;
-    display: block;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -238,25 +237,16 @@ h1 {
 
 @media only screen and (max-height: 480px),
 (max-width: 720px) {
-    #toggleGame {
-        position: fixed;
-        bottom: 25%;
-        top: 75%;
-    }
-
-    #toggleThings {
+    
+    #fullscreen-button,
+    #rotaDisplay {
         display: none;
     }
-
 
     #winnerScreen {
         width: 74%;
         bottom: 50%;
         top: 49%;
-    }
-
-    #fullscreen-button {
-        display: none;
     }
 
     .btn-text {
@@ -283,11 +273,7 @@ h1 {
         width: 55%;
     }
 
-    #HowToPlay {
-        font-size: 14px;
-        font-weight: 200;
-    }
-
+    #HowToPlay,
     #HowToPlay>span {
         font-size: 14px;
         font-weight: 200;
@@ -365,10 +351,6 @@ h1 {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-    }
-
-    #rotaDisplay {
-        display: none;
     }
 }
 
