--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,22 @@
 * {
-    font-family: 'Luckiest Guy', Arial, Helvetica, sans-serif !important;
+    font-family: 'Luckiest Guy', Arial, Helvetica, sans-serif !important
 }
 
 #loadingscreen {
+    background-color: #000;
     height: 100%;
-    width: 100%;
     position: fixed;
-    z-index: 900;
-    background-color: black;
+    width: 100%;
+    z-index: 900
 }
 
 #loadingScreenSubDiv {
-    background-image: url('../img/1.Sharkie/3.Swim/PreviewOP2.gif');
+    background-image: url(../img/1.Sharkie/3.Swim/PreviewOP2.gif);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
-    width: 100vw;
     height: 100vh;
-}
-
-.d-none {
-    display: none;
-}
-
-#rotaDisplay {
-    display: none;
-}
-
-#restartBtn {
-    z-index: 999;
+    width: 100vw
 }
 
 #touch-area-left,
@@ -37,330 +25,303 @@
 #bubbleAttackTouch,
 #slapAttackTouch {
     display: none;
-    opacity: 0.8;
+    opacity: .8
 }
 
 body,
 html {
-    background-color: black;
-    margin: 0;
-    padding: 0;
+    background-color: #000;
     display: block;
+    margin: 0;
+    padding: 0
 }
 
 #fullscreen {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    background-image: url('../img/3.Background/background.png');
+    background-image: url(../img/3.Background/background.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
     height: 100%;
-    width: 100%;
+    justify-content: center;
     overflow: hidden;
+    position: fixed;
+    width: 100%
 }
 
 #canvasOver,
 .canvasOver {
+    align-items: center;
     display: flex;
     flex-direction: column;
-    padding-top: 10px;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-}
-
-#toggleThings  {
-    display: flex;
-}
-
-.canvas-field {
-    /* position: relative;
-    display: flex;
-    justify-content: center;
-    height: 480px;
-    width: 720px; */
+    padding-top: 10px
 }
 
 #gameOverScreen,
 #winnerScreen {
-    z-index: 9999;
-    position: fixed;
-    margin: auto;
+    height: auto;
     left: 0;
+    margin: auto;
+    position: fixed;
     right: 0;
     top: 60px;
-    height: auto;
     width: 75%;
+    z-index: 9999
 }
 
 canvas {
-    background-color: rgb(0, 0, 0);
-    margin-right: auto;
-    margin-left: auto;
-    display: none;
-    border-radius: 10px;
+    background-color: #000;
     border: border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    display: none;
+    margin-left: auto;
+    margin-right: auto
 }
 
 h1 {
-    color: rgb(132, 0, 255);
+    color: #8400ff;
     font-size: 48px;
-    text-align: center;
-    text-shadow: 2px 2px 4px #000000;
-    overflow: hidden;
     margin: 8px 0;
+    overflow: hidden;
+    text-align: center;
+    text-shadow: 2px 2px 4px #000
 }
 
 #HowToPlay {
-    color: rgb(255, 230, 0);
-    height: 480px;
-    width: 720px;
-    display: none;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
-    text-shadow: rgb(0, 0, 0) 1px 0 10px;
-    text-align: center;
-    /* Absolute centering: */
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    background-image: url('../img/3.Background/Dark/1.png');
+    background-image: url(../img/3.Background/Dark/1.png);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
-    width: 100%;
-}
-
-.displayNone {
+    bottom: 0;
+    color: #ffe600;
     display: none;
+    flex-direction: column;
+    height: 480px;
+    height: 100%;
+    justify-content: center;
+    left: 0;
+    margin: auto;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    text-shadow: #000 1px 0 10px;
+    top: 0;
+    width: 720px;
+    width: 100%
 }
 
-.displayFlex {
-    display: flex;
-}
-
-/* Button container */
 .btn-container {
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
-    height: 50px;
-    /* border-radius: 25px; */
-    /* background-color: rgb(132, 0, 255);
-    border: rgb(132, 0, 255) solid; */
-    cursor: pointer;
-    text-decoration: none;
-    border-radius: 15px;
+    backdrop-filter: blur(30px);
     background-color: rgba(255, 255, 255, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(30px);
+    border-radius: 15px;
     color: rgba(255, 255, 255, 0.8);
-    z-index: 9;
+    cursor: pointer;
+    display: inline-block;
+    height: 50px;
+    overflow: hidden;
+    position: relative;
+    text-decoration: none;
+    z-index: 9
 }
 
-/* Button text */
 .btn-text {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    width: 225px;
-    height: 100px%;
     color: #fff;
+    display: flex;
     font-size: 16px;
-    text-transform: uppercase;
+    height: 100px%;
+    justify-content: center;
     letter-spacing: 2px;
-    transition: transform 0.2s ease;
     margin: 10px;
+    text-transform: uppercase;
+    transition: transform .2s ease;
+    width: 225px
 }
 
-#toggleGame {
-    z-index: 999;
-}
-
-/* Hover effect */
 .btn-container:hover .btn-text {
-    transform: translateY(-3px);
+    transform: translateY(-3px)
 }
 
-/* Active effect */
 .btn-container:active .btn-text {
     transform: translateY(0);
-    transition: none;
+    transition: none
 }
 
-/* Smartphones */
+.d-none,
+#rotaDisplay,
+.displayNone {
+    display: none
+}
+
+#restartBtn,
+#toggleGame {
+    z-index: 999
+}
+
+#toggleThings,
+.displayFlex {
+    display: flex
+}
 
 @media only screen and (max-width: 720px) {
     canvas {
-        width: 100%;
+        width: 100%
     }
 
     #winnerScreen {
-        width: 75%;
         bottom: 50px;
+        width: 75%
     }
 
     .btn-text {
-        width: 170px;
         margin: 6px;
         padding: 0;
+        width: 170px
     }
 
     .btn-container {
-        height: 40px;
+        height: 40px
     }
 
     h1 {
-        font-size: 42px;
+        font-size: 42px
     }
 }
 
 @media only screen and (max-height: 480px) {
     canvas {
-        height: 100vh;
+        height: 100vh
     }
 }
 
 @media only screen and (max-width: 720px) {
     canvas {
-        width: 100%;
+        width: 100%
     }
 }
 
 @media only screen and (max-height: 480px),
 (max-width: 720px) {
-    
+
     #fullscreen-button,
     #rotaDisplay {
-        display: none;
+        display: none
     }
 
     #winnerScreen {
-        width: 74%;
         bottom: 50%;
         top: 49%;
+        width: 74%
     }
 
     .btn-text {
-        width: 170px;
         margin: 6px;
         padding: 0;
+        width: 170px
     }
 
     .btn-container {
-        height: 40px;
+        height: 40px
     }
 
     h1 {
-        font-size: 42px;
+        font-size: 42px
     }
 
     h2 {
-        margin: 0;
+        margin: 0
     }
 
     #gameOverScreen,
     #winnerScreen {
         top: 40px;
-        width: 55%;
+        width: 55%
     }
 
     #HowToPlay,
     #HowToPlay>span {
         font-size: 14px;
-        font-weight: 200;
-    }
-
-    #touch-area-left {
-        height: 140px;
-        width: 220px;
-        position: fixed;
-        left: 5%;
-        bottom: 10%;
-        display: flex;
-        flex-direction: column;
+        font-weight: 200
     }
 
     #touch-area-right {
-        display: block;
-        position: fixed;
-        right: 5px;
+        align-items: center;
         bottom: 5px;
-        height: 250px;
-        width: 250px;
+        display: block;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        height: 250px;
         justify-content: center;
+        position: fixed;
+        right: 5px;
         transform: rotate(45deg);
+        width: 250px
     }
 
     .touchBtn {
         height: 70px;
-        width: 75px;
+        width: 75px
     }
 
     #bubbleAttackTouch,
     #slapAttackTouch {
         display: flex;
-        transform: rotate(129deg);
+        transform: rotate(129deg)
     }
 
     .attack-btn {
-        height: 115px;
-        width: 115px;
-        display: flex;
-        justify-content: center;
         align-items: center;
+        display: flex;
+        height: 115px;
+        justify-content: center;
+        width: 115px
     }
 
     #touch-area-left-img {
-        height: 140px;
-        width: 220px;
         display: block;
+        height: 140px;
+        width: 220px
     }
 
     .span-wrap {
-        display: flex;
-        flex-direction: column;
         align-items: stretch;
-        width: 95%;
-    }
-
-    .touchbtn-left {
-        height: 140px;
-        width: 220px;
-        position: fixed;
-        left: 5%;
-        bottom: 10%;
         display: flex;
         flex-direction: column;
+        width: 95%
     }
 
     .touchbtn-rows {
-        width: 225px;
-        height: 70px;
         display: flex;
         flex-direction: row;
+        height: 70px;
         justify-content: space-around;
+        width: 225px
+    }
+
+    #touch-area-left,
+    .touchbtn-left {
+        bottom: 10%;
+        display: flex;
+        flex-direction: column;
+        height: 140px;
+        left: 5%;
+        position: fixed;
+        width: 220px
     }
 }
 
 @media (max-width: 820px) and (orientation: portrait) {
     #rotaDisplay {
-        display: flex !important;
         align-items: center;
-        justify-content: center;
-        z-index: 999;
+        display: flex !important;
         height: 100vh;
+        justify-content: center;
+        z-index: 999
     }
 
     #touch-area-left,
@@ -369,6 +330,6 @@ h1 {
     #bubbleAttackTouch,
     #slapAttackTouch,
     #loadingscreen {
-        display: none !important;
+        display: none !important
     }
 }
