--- a/css/style.css
+++ b/css/style.css
@@ -252,14 +252,14 @@ h1 {
 
     #touch-area-right {
         align-items: center;
-        bottom: 5px;
+        bottom: 0;
         display: block;
         display: flex;
         flex-direction: column;
         height: 250px;
         justify-content: center;
         position: fixed;
-        right: 5px;
+        right: 0;
         transform: rotate(45deg);
         width: 250px
     }
@@ -306,11 +306,11 @@ h1 {
 
     #touch-area-left,
     .touchbtn-left {
-        bottom: 10%;
+        bottom: 5%;
         display: flex;
         flex-direction: column;
         height: 140px;
-        left: 5%;
+        left: 2%;
         position: fixed;
         width: 220px
     }
